--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>Friday - CMS</title>
+    <title>Friday - Admin</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
 
