--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web system, Create by Jean Godoy" />
-    <meta charset="utf-8" >
+    <meta charset="utf-8" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
